--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 body {
-    margin: 60px auto;
+    margin-left: 30px auto;
+    margin-left: 60px auto;
+    margin-top: 40px auto;
     width: 70%;
     background-image: url("/vehicle-wireframe-model.jpg");
     background-repeat: no-repeat;
