--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin-left: 30px auto;
-    margin-left: 60px auto;
+    margin-right: 60px auto;
     margin-top: 40px auto;
     width: 70%;
     background-image: url("/vehicle-wireframe-model.jpg");
