--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/projects">Projects</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,7 +20,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:areebmehmood@gmail.com">email</a></li>
+	        		<li><a href="mailto:amehmood7@gatech.com">email</a></li>
 	        		<!-- <li><a href="https://github.com/areebm">github.com/areebm</a></li> -->
 				</ul>
 			</footer>
