--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:amehmood7@gatech.com">email</a></li>
+	        		<li><a href="mailto:amehmood7@gatech.edu">email</a></li>
 	        		<!-- <li><a href="https://github.com/areebm">github.com/areebm</a></li> -->
 				</ul>
 			</footer>
