--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #e21414;
+    color: #ffffff;
 }
 a:hover {
     text-decoration: underline;
