--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body {
     margin: 40px 60px 10px 50px;
     width: 70%;
-    background-image: url("/vehicle-wireframe-model.jpg");
+/*     background-image: url("/vehicle-wireframe-model.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #EEB214;
+    background-size: cover; */
+    background-color: #ffffff;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -18,7 +18,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #dd3813;
 }
 a:hover {
     text-decoration: underline;
