--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/">About</a></li>
-	        		<li><a href="/">Projects</a></li>
+				<li><a href="/">Home</a></li>
+		        	<li><a href="/"><strike>About</strike></a></li>
+	        		<li><a href="/"><strike>Projects</strike></a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
