--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 a {
+    text-align: center;
     text-decoration: none;
     color: #dd3813;
 }
@@ -24,10 +25,12 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
+    text-align: center;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
+    text-align:center;
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
