--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 40px 60px 10px 50px;
-    width: 70%;
+    width: auto;
 /*     background-image: url("/vehicle-wireframe-model.jpg");
     background-repeat: no-repeat;
     background-size: cover; */
