--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    width: auto;
 }
 a {
     text-align: center;
@@ -36,12 +37,14 @@ p {
     color: #333;
 }
 footer {
+    align-items: center;
     border-top: 0px solid #d5d5d5;
     font-size: .8em;
 }
 
 ul.posts { 
     margin: 20px auto 40px; 
+    width: auto;
     font-size: 1.5em;
 }
 
