--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 			<nav>
 	    		<ul>
 				<li><a href="/">Home</a></li>
-		        	<li><a href="/"><strike>About</strike></a></li>
-	        		<li><a href="/"><strike>Projects</strike></a></li>
+<!-- 		        	<li><a href="/"><strike>About</strike></a></li>
+	        		<li><a href="/"><strike>Projects</strike></a></li> -->
 	    		</ul>
 			</nav>
 			<div class="container">
