--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 		<body>
 			<nav>
 	    		<ul>
-				<li><a href="/">Home</a></li>
-<!-- 		        	<li><a href="/"><strike>About</strike></a></li>
+<!--				<li><a href="/">Home</a></li>
+ 		        	<li><a href="/"><strike>About</strike></a></li>
 	        		<li><a href="/"><strike>Projects</strike></a></li> -->
 	    		</ul>
 			</nav>
