--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ body {
     background-color: #ffffff;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+/*     font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
+    font-family: 'CenturyOldStyleRegular';
     text-align:center;
     padding: 0px;
     list-style: none;
