--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ p {
 footer {
     align-items: center;
     border-top: 0px solid #d5d5d5;
-    font-size: .8em;
+    font-size: 1.5em;
 }
 
 ul.posts { 
