--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a:hover {
 h1 {
     text-align: center;
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'CenturyOldStyleRegular';
     border-bottom: 3px solid #ff0000;
 }
 p {
