--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,21 @@ body {
     }
 }
 
+/*Image positioning*/
+ /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+} 
+
 
 /* Header
 ==================================================*/
